# PicoCMT

.github/workflows/: docker-build-and-push.yml
client/: index.html  index.js  package-lock.json  package.json  style.css
docker/: Dockerfile  build.sh  entrypoint.sh  nginx.conf  rerun.sh  run.sh  supervisord.conf  supervisord.only_server.conf
server/: Cargo.toml  config.toml
server/src/: cmt_manager.rs  main.rs
server/src/handlers/: add_comment.rs  get_sub_comments.rs  get_top_comments.rs  mod.rs
server/src/layers/: rate_limit.rs
systemd/: picocmt.service
