[package]
name = "picocmt"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
colored = "2.2.0"
clogger = { git = "https://github.com/ChengCheng0v0/CLogger" }
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.8.0-rc.1", features = ["macros"] }
axum-extra = "0.10.0"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-native-tls",
  "macros",
  "uuid",
  "chrono",
  "postgres",
] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = "1.0.217"
serde_json = "1.0.134"
regex = "1.11.1"
toml = "0.8.19"
clap = { version = "4.5.24", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
ammonia = "4.0.0"
